--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
-p<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
 <style>
-.Bio {
+.Bio1 {
    float: left;
    margin: 10px;
    padding: 10px;
-   max-width: 300px;
-   height: 300px;
-   border: 1px solid black;
+   max-width: 800px;
+   height: 900px;
+   border: 1px dotted black;
 }   
 </style>
+
+<style>
+.Bio2 {
+   float: right;
+   margin: 10px;
+   padding: 10px;
+   max-width: 800px;
+   height: 900px;
+   border: 1px dotted black;
+}   
+</style>
+
+
+
 </head>
 <body>
 
 <h1>Asim Unmesh</h1>
 <h2>~"Learn and Evolve Everyday."<h2>
 
-<div class="Bio">
+<div class="Bio2">
   <h2>CVPR 2017</h2>
   <p>My paper got accepted at CVPR 2017. I am the 2nd author in this paper. It is a work on 3D shape learning using Deep Learning. </p>
   <p>This is the beginning of a journey for me. I am motivated by this publication and study more and take up more projects in Machine Learning and Computer Vision Area.</p>
 </div>
 
-<div class="Bio">
+<div class="Bio1">
   <h2>Yearlong Objective</h2>
     <p>My year long objective for 2017-18 is to become more rooted in the Mathematics of Machine Learning and Computer Vision and try out a number of projects. I have also set out an algorithmic programming objective for 3 months in 2 languages, C++ and python. My aim is to fill in for what I have not been able to build in past 4 years, and then be able to confidently seek out opportunities around the world.</p>
 </div>
