--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 <body>
 
 <h1>Asim Unmesh</h1>
-<h2>~"Learn and Evolve Everyday."<h2>
+<h3>IIT Kanpur</h3>
+<h3>Contact: a[DOT]unmesh[AT]gmail[DOT]com </h3>
+<h2>~"Learn and Evolve Everyday. Be Gratuitious and respectful."<h2>
 
 <div class="Bio1">
   <h2>CVPR 2017</h2>
   <p>My paper got accepted at CVPR 2017. I am the 2nd author in this paper. It is a work on 3D shape learning using Deep Learning. </p>
-  <p>This is the beginning of a journey for me. I am motivated by this publication and study more and take up more projects in Machine Learning and Computer Vision Area.</p>
+<a href = "https://arxiv.org/pdf/1703.04079.pdf"> Arxiv Link of Paper. </a> 
+  <p>This is the beginning of a journey for me. I am motivated by this publication to study more and take up more projects in Machine Learning and Computer Vision Area.</p>
 </div>
 
 <div class="Bio1">
