--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
 <h1>Asim Unmesh</h1>
+<img src="asim.jpg">
 <h3>IIT Kanpur</h3>
 <h3>Contact: a[DOT]unmesh[AT]gmail[DOT]com </h3>
 <h2>~"Learn and Evolve Everyday. Be Gratuitious and respectful."<h2>
