--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </style>
 </head>
 <body>
-<img src="./asim.jpg" style="width:125;height:150;">
+<img src="./asim.jpg" style="width:62px;height:75px;">
 <h1>Asim Unmesh</h1>
 <h3>IIT Kanpur</h3>
 <h3>Contact: a[DOT]unmesh[AT]gmail[DOT]com </h3>
