--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
 <div class="Bio1">
   <h3>CVPR 2017</h3>
-  <p>My paper got accepted at CVPR 2017. I am the 2nd author in this paper. It is a work on 3D shape learning using Deep Learning. </p>
+  <p size="3">My paper got accepted at CVPR 2017. I am the 2nd author in this paper. It is a work on 3D shape learning using Deep Learning. </p>
 <a href = "https://arxiv.org/pdf/1703.04079.pdf"> Arxiv Link of Paper. </a> 
-  <p>This is the beginning of a journey for me. I am motivated by this publication to study more and take up more projects in Machine Learning and Computer Vision Area.</p>
+  <p size = "3">This is the beginning of a journey for me. I am motivated by this publication to study more and take up more projects in Machine Learning and Computer Vision Area.</p>
 </div>
 
 <div class="Bio1">
   <h3>Yearlong Objective</h3>
-    <p>My year long objective for 2017-18 is to become more rooted in the Mathematics of Machine Learning and Computer Vision and try out a number of projects. I have also set out an algorithmic programming objective for 3 months in 2 languages, C++ and python. My aim is to fill in for what I have not been able to build in past 4 years, and then be able to confidently seek out opportunities around the world.</p>
+    <p size = "3">My year long objective for 2017-18 is to become more rooted in the Mathematics of Machine Learning and Computer Vision and try out a number of projects. I have also set out an algorithmic programming objective for 3 months in 2 languages, C++ and python. My aim is to fill in for what I have not been able to build in past 4 years, and then be able to confidently seek out opportunities around the world.</p>
 </div>
 
 </body>
