--- a/index.html
+++ b/index.html
@@ -2,33 +2,31 @@
 <html lang="en-us">
 <head>
 <style>
-
 .Bio1 {
    float: left;
    margin: 10px;
    padding: 10px;
    max-width: 800px;
 }   
-
 </style>
 </head>
 <body>
 <img src="./asim.jpg" style="width:120px;height:120px;">
-<h1>Asim Unmesh</h1>
+<h2>Asim Unmesh</h2>
 <h3>IIT Kanpur</h3>
 <h3>Contact: a[DOT]unmesh[AT]gmail[DOT]com </h3>
-<h2>~"Learn and Evolve Everyday. Be Gratuitious and respectful."<h2>
+<h3>~"Learn and Evolve Everyday. Respect your luck."<h3>
 
 <div class="Bio1">
-  <h3>CVPR 2017</h3>
-  <p size="3">My paper got accepted at CVPR 2017. I am the 2nd author in this paper. It is a work on 3D shape learning using Deep Learning. </p>
+  <h4>CVPR 2017</h4>
+  <font size="3">My paper got accepted at CVPR 2017. I am the 2nd author in this paper. It is a work on 3D shape learning using Deep Learning.
 <a href = "https://arxiv.org/pdf/1703.04079.pdf"> Arxiv Link of Paper. </a> 
-  <p size = "3">This is the beginning of a journey for me. I am motivated by this publication to study more and take up more projects in Machine Learning and Computer Vision Area.</p>
+  This is the beginning of a journey for me. I am motivated by this publication to study more and take up more projects in Machine Learning and Computer Vision Area.</font>
 </div>
 
 <div class="Bio1">
-  <h3>Yearlong Objective</h3>
-    <p size = "3">My year long objective for 2017-18 is to become more rooted in the Mathematics of Machine Learning and Computer Vision and try out a number of projects. I have also set out an algorithmic programming objective for 3 months in 2 languages, C++ and python. My aim is to fill in for what I have not been able to build in past 4 years, and then be able to confidently seek out opportunities around the world.</p>
+  <h4>Yearlong Objective</h4>
+    <font size = "3">My year long objective for 2017-18 is to become more rooted in the Mathematics of Machine Learning and Computer Vision and try out a number of projects. I have also set out an algorithmic programming objective for 3 months in 2 languages, C++ and python. My aim is to fill in for what I have not been able to build in past 4 years, and then be able to confidently seek out opportunities around the world.</font>
 </div>
 
 </body>
