--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h2>Asim Unmesh</h2>
 <h3>IIT Kanpur</h3>
 <h3>Contact: a[DOT]unmesh[AT]gmail[DOT]com </h3>
-<h3>~"Learn and Evolve Everyday. Respect your luck."<h3>
+<h3>~"The greatest talent is the talent to work hard."<h3>
 
 <div class="Bio1">
   <h4>CVPR 2017</h4>
@@ -26,7 +26,7 @@
 
 <div class="Bio1">
   <h4>Yearlong Objective</h4>
-    <font size = "3">My year long objective for 2017-18 is to become more rooted in the Mathematics of Machine Learning and Computer Vision and try out a number of projects. I have also set out an algorithmic programming objective for 3 months in 2 languages, C++ and python. My aim is to fill in for what I have not been able to build in past 4 years, and then be able to confidently seek out opportunities around the world.</font>
+    <font size = "3">My year long objective for 2017-18 is to become more rooted in the Mathematics of Machine Learning and Computer Vision and try out a number of projects. </font>
 </div>
 
 </body>
